--- a/Alice/alice.html
+++ b/Alice/alice.html
@@ -8,6 +8,20 @@
 </head>
 <body>
 <!-- Creating a websited using DOM: document object model -->
+
+<!-- 
+
+div element with a  class id alice.
+
+main element with id of main 
+
+p element with id of info
+
+div element with id of logo 
+
+footer element with class of footer 
+
+-->
 <div id="alice">
     <header id="header">
     <h1 id="name"></h1>
