--- a/Alice/alice.html
+++ b/Alice/alice.html
@@ -4,39 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HappyBirthday</title>
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./alice.css">
 </head>
 <body>
-<!-- Creating a websited using DOM: document object model -->
-
-<!-- 
-
-div element with a  class id alice.
-
-main element with id of main 
-
-p element with id of info
-
-div element with id of logo 
-
-footer element with class of footer 
-
--->
-<div id="alice">
-    <header id="header">
-    <h1 id="name"></h1>
-</header>
-
-<main id="main">
-    <p id="info"></p>
-</main>
-
-<div id="logo"></div>
-
-<footer id="footer"></footer>
-
-</div>
-
+<div id="alice"></div>
 
 <script src="./alice.js"></script>
 </body>
