--- a/Alice/alice.html
+++ b/Alice/alice.html
@@ -9,6 +9,14 @@
 <body>
 <div id="alice"></div>
 
+<!-- Happybirthday name = pop once 
+ - Background color: c
+ 
+
+
+
+-->
+
 <script src="./alice.js"></script>
 </body>
 </html>
