--- a/Alice/alice.html
+++ b/Alice/alice.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="./alice.css">
 </head>
 <body>
-<div id="alice"></div>
+<div id="alice">
+    <div class="comments">
+        <p>SHERLYNE LOVES YOU </p>
+        <p></p>
+    </div>
+</div>
 
 <!-- Happybirthday name = pop once 
  - Background color: c
