--- a/Todo/todo.html
+++ b/Todo/todo.html
@@ -25,9 +25,8 @@
               <input type="submit" class="submitbtn" placeholder="Add"/>
             </form>
           </div>
-        <div id="todo_container">
-            <!-- Where the list will to do will be appended -->
-            <p id="p"></p>
+        <div id="addcontainer">
+            <!-- Where the list  will be appended -->
             <div class="image">
                 <img src="" alt="">
             </div>
