update todo files

--- a/Alice/alice.html
+++ b/Alice/alice.html
@@ -9,16 +9,12 @@
 <body>
 <div id="alice">
     <div class="comments">
-        <p>SHERLYNE LOVES YOU </p>
-        <p></p>
+        <p>Happy Birthday Alice  </p>
     </div>
 </div>
 
 <!-- Happybirthday name = pop once 
  - Background color: c
- 
-
-
 
 -->
 
