--- a/Todo/todo.html
+++ b/Todo/todo.html
@@ -14,36 +14,32 @@
         </header>
         <main id="main">
           <div id="days">
-            <h2 >Monday</h2>
+            <h2 >Monday</h2>  
+          </div>
+          <img src="" alt="">
+          <div id="todolist">
             <form  id="todoform">
+              <label for="addtodo"><b>Todo:</b></label>
               <input
                 type="text"
                 name="Add To Do "
                 id="addtodo"
                 placeholder="Add To Do"
-              /> 
-              <input type="submit" class="submitbtn" placeholder="Add"/>
+              required/> 
+              <input type="submit" class="submitbtn" placeholder="Add" />
             </form>
           </div>
+
         <div id="addcontainer">
             <!-- Where the list  will be appended -->
-            <div class="image">
-                <img src="" alt="">
-            </div>
+             <h3>To-Do List</h3>
         </div>
+
         <div id="done">
-            <h3>Done list</h3>
+            <h3>Done List</h3>
         </div>
-          <br />
-          <div id="buttons">
-            <button class="btn">Alert Me</button> <br /><br /><button
-              class="btn"
-            >
-              console.log
-            </button>
-          </div>
         </main>
-        <footer id="footer"></footer>
+        <footer id="footercopyright"></footer>
       </div>
     </div>
 
