--- a/Book/small.html
+++ b/Book/small.html
@@ -10,17 +10,17 @@
   </head>
   <body>
     <header>
-      <h1>Books to Read</h1>
+      <h1>Personal Library </h1>
     </header>
     <div class="container">
-      <form id="bookform">
+      <form id="bookform" >
         <label for="title">Title</label>
-        <input type="text" id="title" name="title" />
+        <input type="text" id="title" name="title" class="inputarea"/>
         <br>
         <label for="author">Author</label>
-        <input type="text" id="author" name="author" />
+        <input type="text" id="author" name="author" class="inpu2" />
         <br>
-        <label for="image_link">Image Link</label>
+        <label for="image_link" >Image Link</label>
         <input type="text" id="image_link" name="image_link">
         <br>
         <label for="description">Description</label>
@@ -28,9 +28,10 @@
         <br>
         <button type="submit">Buy a Book</button>
       </form>
-      <ul id="book-list" class="cards">
+      <ul id="list" class="cards">
         <!-- Books here  -->
       </ul>
+      <a href=""_target ></a>
     </div>
   </body>
 </html>
