--- a/Book/small.html
+++ b/Book/small.html
@@ -15,23 +15,26 @@
     <div class="container">
       <form id="bookform" >
         <label for="title">Title</label>
-        <input type="text" id="title" name="title" class="inputarea"/>
+        <input type="text" id="title" name="title" class="input1"/>
         <br>
         <label for="author">Author</label>
-        <input type="text" id="author" name="author" class="inpu2" />
+        <input type="text" id="author" name="author" class="input2" />
         <br>
         <label for="image_link" >Image Link</label>
         <input type="text" id="image_link" name="image_link">
         <br>
-        <label for="description">Description</label>
+        <label for="pages">Pages</label>
+        <input type="pages" id="pages" name="pages">
+        <!-- <label for="description">Description</label>
         <textarea name="description" id="description"></textarea>
-        <br>
+        <br> -->
         <button type="submit">Buy a Book</button>
       </form>
       <ul id="list" class="cards">
         <!-- Books here  -->
       </ul>
-      <a href=""_target ></a>
     </div>
   </body>
 </html>
+
+
