--- a/Book/small.html
+++ b/Book/small.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="./small.js"></script>
+    <script src="./small.js" defer></script>
     <link rel="stylesheet" href="./small.css">
-    
-    <title>Document</title>
+    <title>Personal Library</title>
   </head>
   <body>
     <header>
@@ -15,24 +14,34 @@
     <div class="container">
       <form id="bookform" >
         <label for="title">Title</label>
-        <input type="text" id="title" name="title" class="input1"/>
+        <input type="text" id="title" name="title" required/>
         <br>
         <label for="author">Author</label>
-        <input type="text" id="author" name="author" class="input2" />
+        <input type="text" id="author" name="author"  />
+        <label for="country">Country</label>
+        <input type="text" id="country" name="country"/>
         <br>
-        <label for="image_link" >Image Link</label>
-        <input type="text" id="image_link" name="image_link">
+        <label for="imagelink" >Image Link</label>
+        <textarea name="imagelink" id="imagelink" placeholder="paste the image link here"></textarea>
+        <br>
+        <label for="language">Language</label>
+        <input type="text" id="language" name="language" />
+        <br>
+        <label for="link" >Link</label>
+        <textarea name="link" id="link" placeholder="paste the wikipedia link here"></textarea>
         <br>
         <label for="pages">Pages</label>
-        <input type="pages" id="pages" name="pages">
-        <!-- <label for="description">Description</label>
-        <textarea name="description" id="description"></textarea>
-        <br> -->
+        <input type="text" id="pages" name="pages">
+        <label for="year">Year</label>
+        <input type="text" name="year" id="year">
+        <br>
         <button type="submit">Buy a Book</button>
       </form>
-      <ul id="list" class="cards">
-        <!-- Books here  -->
-      </ul>
+      <section>
+        <ul id="list" class="cards">   
+             <!-- Books here  -->
+          </ul>
+      </section>
     </div>
   </body>
 </html>
