--- a/super/super.html
+++ b/super/super.html
@@ -18,11 +18,12 @@
    <hr>
 
    <!-- Variables -->
-   <h2>VARIABLES / CART </h2>
+   <h2>VARIABLES/CART </h2>
    <br>
    <!--  Create the buttons and adding a javascript code into the button element-->
      <!-- Show quantity: shows the total of the quantity-->
-     <button onclick="console.log(`Cart total quantity:${cartQuantity}`);">Show Quantity</button>
+     <button onclick="
+     console.log(`Cart total quantity:${cartQuantity}`);">Show Quantity</button>
      
      <!-- Add to cart -->
      <button onclick="
@@ -40,6 +41,16 @@
      cartQuantity= cartQuantity +3; 
      console.log(`Cart quantity:${cartQuantity}`);">+3</button>
 
+     <!-- +4 -->
+     <button onclick="
+     cartQuantity+=3; 
+     console.log(`Cart quantity:${cartQuantity}`);">+4</button>
+
+     <!-- +5 -->
+     <button onclick="
+     cartQuantity+=5; 
+     console.log(`Cart quantity:${cartQuantity}`);">+5</button>
+
      <!-- Reset to zero -->
      <button onclick="
      // trying to reset the button to zero
@@ -47,12 +58,55 @@
      console.log(`Cart was reset`) 
      console.log(`Cart quantity:${cartQuantity}`);">Reset Cart</button>
 
+     <!-- Remove from Cart -->
+     <button onclick="
+     // trying to reset the button to zero
+     cartQuantity-=1;
+     console.log(`Item removed removed`) 
+     console.log(`Remaining quantity:${cartQuantity}`);">Remove from Cart</button>
 
-   Variable: a string: 
+     <!-- Removes from the cart  -->
+     <!-- -2-->
+     <button onclick="
+     cartQuantity-=2; 
+     console.log(`Cart quantity:${cartQuantity}`);">-2</button>
+
+     <!-- -3 -->
+     <button onclick="
+     cartQuantity-=3; 
+     console.log(`Cart quantity:${cartQuantity}`);">-3</button>
+
+
+   <!-- Variable: a string:  -->
+    <!-- Variables are written in 
+     - camelCase:  
+     
+    -->
+
+
+
+
+
+
+
 <!-- Javascript code -->
-  <script src="./super.js"> 
+  <script > 
     // starting quantity = 0 ; 
-    //let cartQuantity=0; 
+    /* let cartQuantity=0;
+    const name = "sherlyne";
+    console.log(`my name is ${name}` ) ;
+    const coffee = 5 
+    const baggels = 2*3;
+    const soup = 9
+    const cost = coffee + baggels + soup;
+    const tax = cost * 0.1
+    console.log(cost);
+    console.log(tax); 
+    const totalCost = cost +tax;
+    console.log(`Total cost : ${totalCost}`); -->
+
+    //console.log(sum(baggels,coffee))*/
+
 
   </script>
 
