--- a/super/super.html
+++ b/super/super.html
@@ -7,107 +7,72 @@
   <link rel="stylesheet" href="./super.css">
 </head>
 <body>
-  <h1>Exercise1</h1>
-  <br>
-  <!-- Exercise -->
-   <h2>Adults Plain Cotton T-shirts</h2>
-   <br>
-   <p>Price: $7.99</p>
-   <button class="addtocart" title="Added"   onclick="alert('Added')">Add to Cart</button>
-   <button  class="buynow"    onclick="alert('Purchased')">Buy Now</button>
-   <hr>
-
+  <h1> JAVASCRIPT RECAP</h1>
    <!-- Variables -->
-   <h2>VARIABLES/CART </h2>
+
+   <h2>3.VARIABLES/CART </h2>
+   <p>
+    <b>Variables</b> are containers thats stores the values 
+    Variable is a container that stores values.
+    <p>We use const, let, var to declare a variable. 
+      <li> <b>const</b>: because it cannot be redeclared. or reassigned </li>
+      <li><b>let</b> -  only when changing the variable later</li>
+      <li><b>var</b> - not used in javascript but is seen in og javascript code </li>
+
+      <b>variable are written in camelCase in javascript;</b>
+    </p>
+    <br>
+    eg: 
+    const name = "Sherlyne" ;
+   </p>
    <br>
-   <!--  Create the buttons and adding a javascript code into the button element-->
-     <!-- Show quantity: shows the total of the quantity-->
-     <button onclick="
-     console.log(`Cart total quantity:${cartQuantity}`);">Show Quantity</button>
-     
-     <!-- Add to cart -->
-     <button onclick="
-     // this is a js code: takes the code and adds it to the already quantity. 
-      cartQuantity+=1; 
-      console.log(`Cart quantity:${cartQuantity}`);">Add to Cart</button>
-
-      <!-- +2 -->
-     <button onclick="
-     cartQuantity= cartQuantity +2; 
-     console.log(`Cart quantity:${cartQuantity}`);">+2</button>
-
-     <!-- +3 -->
-     <button onclick="
-     cartQuantity= cartQuantity +3; 
-     console.log(`Cart quantity:${cartQuantity}`);">+3</button>
-
-     <!-- +4 -->
-     <button onclick="
-     cartQuantity+=3; 
-     console.log(`Cart quantity:${cartQuantity}`);">+4</button>
-
-     <!-- +5 -->
-     <button onclick="
-     cartQuantity+=5; 
-     console.log(`Cart quantity:${cartQuantity}`);">+5</button>
-
-     <!-- Reset to zero -->
-     <button onclick="
-     // trying to reset the button to zero
-     cartQuantity=0;
-     console.log(`Cart was reset`) 
-     console.log(`Cart quantity:${cartQuantity}`);">Reset Cart</button>
-
-     <!-- Remove from Cart -->
-     <button onclick="
-     // trying to reset the button to zero
-     cartQuantity-=1;
-     console.log(`Item removed removed`) 
-     console.log(`Remaining quantity:${cartQuantity}`);">Remove from Cart</button>
-
-     <!-- Removes from the cart  -->
-     <!-- -2-->
-     <button onclick="
-     cartQuantity-=2; 
-     console.log(`Cart quantity:${cartQuantity}`);">-2</button>
-
-     <!-- -3 -->
-     <button onclick="
-     cartQuantity-=3; 
-     console.log(`Cart quantity:${cartQuantity}`);">-3</button>
-
 
    <!-- Variable: a string:  -->
-    <!-- Variables are written in 
-     - camelCase:  
-     
+    <!-- Variables are written in - camelCase:  
     -->
 
+    <H2>3. Booleans </H2>
+    <p><b>Booleans</b>-checks if the condition/s is true or false</p>
+ <!-- Booleans : checks if the conditions are true or false:  -->
+
+<h3>Comparison Operator</h3>
+ <li>greater than ></li>
+ <li>less than < </li>
+ <li>greater than or equal to >=</li>
+ <li>less than or equal to <= </li>
+ <li> equal to ===</li> 
+ <li>not equal to !==</li>
+<br> 
+
+ <h3>IF STATEMENT</h3>
+ if (if the condition is true ){
+  return this statement
+ } else { return this if the statement is false or otherwise this; 
+ }
+
+ <h4>example 2</h4>
+ let age = 50; // condition 
+ <br> 
+    if (age>18){
+      console.log("you can drive")
+    }else if (age < 0 && age < 18 ){
+      console.log("You cannot drive")
+    } else {
+      console.log("You are old")
+    }
+
+    <b>will return "you cannot drive"</b>
 
 
-
-
-
-
+  
 <!-- Javascript code -->
   <script > 
-    // starting quantity = 0 ; 
-    /* let cartQuantity=0;
-    const name = "sherlyne";
-    console.log(`my name is ${name}` ) ;
-    const coffee = 5 
-    const baggels = 2*3;
-    const soup = 9
-    const cost = coffee + baggels + soup;
-    const tax = cost * 0.1
-    console.log(cost);
-    console.log(tax); 
-    const totalCost = cost +tax;
-    console.log(`Total cost : ${totalCost}`); -->
-
-    //console.log(sum(baggels,coffee))*/
-
-
+    let age = 2; // condition 
+    if (age>18){
+      console.log("you can drive")
+    }else{
+      console.log("You cannot drive")
+    }
   </script>
 
 
