--- a/super/super.html
+++ b/super/super.html
@@ -8,22 +8,38 @@
 </head>
 <body>
   <h1> JAVASCRIPT RECAP</h1>
-   <!-- Variables -->
+  <!-- DATA TYPES -->
+<h2>VARIABLES AND DATA TYPES </h2>
 
-   <h2>3.VARIABLES/CART </h2>
+
+   <h3>VARIABLES</h3>
+   <p>VARIABLES(Identifiers) : this that contain/stores the values. <br>
+    We use const, let, var to declare a variable. 
+   </p> 
+   <li> -let : can allows the reassignment of values  eg:  let cat = "rose" </li>
+   <li>expression : anything that returns a value</li>
+   <li> Statement : a set of instructions does not return a value </li>
+   <br>
    <p>
     <b>Variables</b> are containers thats stores the values 
     Variable is a container that stores values.
-    <p>We use const, let, var to declare a variable. 
-      <li> <b>const</b>: because it cannot be redeclared. or reassigned </li>
+    <p>We use const, let, var to declare a variable and assign a value to it. 
+      
+      <li> <b>const</b>: because it cannot be redeclared. or reassigned it  protects the variables </li>
       <li><b>let</b> -  only when changing the variable later</li>
       <li><b>var</b> - not used in javascript but is seen in og javascript code </li>
+
+      <h3>Variables Names in JavaScript</h3>
+      <li>Variables should start in lower case</li>
+      <li>Use the camelCase</li>
+      <li>caseMatters this are all different javascript is also different</li>
 
       <b>variable are written in camelCase in javascript;</b>
     </p>
     <br>
     eg: 
     const name = "Sherlyne" ;
+    You can also <br> Interpolate ${Interpolate} and <b>concatenate +</b>
    </p>
    <br>
 
@@ -31,7 +47,33 @@
     <!-- Variables are written in - camelCase:  
     -->
 
-    <H2>3. Booleans </H2>
+    
+   <h3>DATA TYPES</h3>
+   <br>
+   <h4>PRIMITIVE DATA-TYPES</h4>
+   <li>Numbers = 1, </li>
+   <li>string = anything between single or double quotes = "sherlyne ", "1" , </li>
+   <li>Boolean - either one of two values true or false</li>
+   <li>undefined = is a empty values </li>
+   <li>Symbol</li>
+   <li>BigInt</li>
+   <br>
+   -typeof returns the datatype of a value/datatype 
+   <br>
+<h4>STRUCTURED DATATYPES</h4>
+<li>Objective</li>
+<li>Functions </li>
+  <br>
+   <h4>STRUCTURED ROOT PRIMITIVE </h4>
+   <li>Null = is the absent of a value </li>
+<br>
+
+<h2>COMPARISON IN JS</h2>
+<p>we have <b>loose equality</b> and <b>strict equality operator</b></p>
+
+
+
+    <H3>3. Booleans </H3>
     <p><b>Booleans</b>-checks if the condition/s is true or false</p>
  <!-- Booleans : checks if the conditions are true or false:  -->
 
@@ -64,7 +106,6 @@
     <b>will return "you cannot drive"</b>
 
 
-  
 <!-- Javascript code -->
   <script > 
     let age = 2; // condition 
