done with rock paper

--- a/super/calculator.html
+++ b/super/calculator.html
@@ -117,7 +117,7 @@
   <p style="justify-content:left;">
     <!-- Finds the total -->
     <button title="total"  onclick="
-    calculation = eval(calculation)
+    //calculation = eval(calculation)
     console.log(`Total= ${calculation}`)">=</button>
   </p>
 </div>
