--- a/super/super.html
+++ b/super/super.html
@@ -94,7 +94,7 @@
  <li> equal to ===</li> 
  <li>not equal to !==</li>
 
- <p>nb: <br> dont use compare numbers with string numbers because js with type converse the string number to a number 
+ <p>nb: <br> don't use compare numbers with string numbers because js with type converse the string number to a number 
  eg 88 > "9" will return true
 <br> </p>
 
@@ -125,6 +125,11 @@
 function isCat(cat){
   return cat === "tiger"?"Hi tiger you are cute": `Hi ${cat}`; 
   }
+
+You can store the ternary in a variable 
+const cat = "tiger"? "Hi tiger": "Hi cat person";
+console.log(cat)
+
 </p>
 <br>
 <h3>SWITCH</h3>
@@ -193,6 +198,8 @@ false && truthy = false
 true &7 true = true 
 true && false = false </p>
 
+
+
 <br>
 <h3>OR(||):</h3>
 <p>The logical OR ( || ) operator also takes two expressions:
@@ -234,6 +241,8 @@ true && false = false </p>
  operator returns the left side's truthy value and completes.
  2. If the left-side expression is falsey, the || operator returns the right side's value (regardless
  of whether it's truthy or falsey) and completes</b>
+
+ B
 
 <h2> ARITHMETIC IN JAVASCRIPT</h2>
 
