--- a/super/06-rock-paper.html
+++ b/super/06-rock-paper.html
@@ -24,15 +24,16 @@
       </p>
       
       <!-- rock -->
-
       <!-- 
       b>Options: generate a random number </b>
         <li>if randomNumber is between 0-1/3 = rock</li>
         <li>if randomNumber is between 1/3-2/3 = paper</li>
         <li>if randomNumber is between 2/3-1 = scissor</li>
       -->
+
+      <!-- rock button -->
     <button
-        onclick="
+    onclick="
 
   const rockRandomNumber =Math.random();
   let rockComputerMove = ``;
