--- a/super/06-rock-paper.html
+++ b/super/06-rock-paper.html
@@ -131,8 +131,8 @@
 
   //if the computer move is rock and button is rock the results equals 
   
-   let result = ''; 
-  if (computerMove  === 'rock'){
+   let result = ''; -0
+if (computerMove  === 'rock'){e4
   result = 'You loose, Computer wins';
   }else if (computerMove === 'paper'){
   result = 'You win';}
