--- a/super/06-rock-paper.html
+++ b/super/06-rock-paper.html
@@ -19,8 +19,6 @@
       the move compare the moves to the the results display the results in a
       popup
 
-
-
       </p>
       
       <!-- rock -->
@@ -34,114 +32,113 @@
       <!-- rock button -->
     <button
     onclick="
-
-  const rockRandomNumber =Math.random();
-  let rockComputerMove = ``;
+    const randomNumber =Math.random();
+    let compMove = '';
   
-  if (RockRandomNumber >= 0 && RockRandomNumber<1/3){
-// Have the computer move : 
-    rockComputerMove = `rock`;
+  if (randomNumber >= 0 && randomNumber<1/3){
+  // Have the computer move : 
+    compMove = 'rock';
 
-  }else if (RockRandomNumber>=1/3 && RockRandomNumber<2/3){
-   rockComputerMove =`paper`;
+  }else if (randomNumber>=1/3 && randomNumber<2/3){
 
+   compMove =`paper`;
   } 
-  else if(RockRandomNumber >=2/6 && RockRandomNumber<1){
-    rockComputerMove =`scissor`;
+  else if(randomNumber >=2/6 && randomNumber<1){
+    compMove =`scissor`;
   } 
 
-//This is what the computer choose 
-  console.log(rockComputerMove);
+  //This is what the computer choose 
+  console.log(compMove);
 
   //if the computer move is rock and button is rock the results equals 
 
-   let rockResult = ``; 
-  if (rockComputerMove  === `rock`){
-  rockResult = `  Its a tie`;
-  }else if (rockComputerMove === `paper`){
-  rockResult = `You loose, Computer wins`;}
-  else if (rockComputerMove === `scissor`){
-  rockResult = `You win`; 
+  let results = ''; 
+
+  if (compMove  === `rock`){
+  results = `  Its a tie`;
+  }else if (compMove === `paper`){
+  results= `You loose, Computer wins`;}
+  else if (compMove === `scissor`){
+  results= `You win`; 
   }
 
   // create a popup
-  alert(`You picked rock, Computer picked ${rockComputerMove}. Results=${rockResult}`);
+  alert(`You picked rock, Computer picked ${compMove}. Results=${results}`);
     
   " > Rock</button>
 
   <!-- paper-->
   <button class="paper"
   onclick="
-      const paperRandomNumber =Math.random();
-      let paperComputerMove = '';
+      const randomNumber =Math.random();
+      let compMove = '';
   
-      if (paperRandomNumber >= 0 && paperRandomNumber<1/3){
+      if (randomNumber >= 0 && randomNumber<1/3){
     // Have the computer move : 
-        paperComputerMove = 'rock';
+        compMove = 'rock';
 
-      }else if (paperRandomNumber>=1/3 && paperRandomNumber<2/3){
-      paperComputerMove ='paper';
+      }else if (randomNumber>=1/3 && randomNumber<2/3){
+      compMove ='paper';
 
       } 
-      else if(paperRandomNumber >=2/6 && paperRandomNumber<1){
-        paperComputerMove ='scissor';
+      else if(randomNumber >=2/6 && randomNumber<1){
+        compMove ='scissor';
       } 
 
 //This is what the computer choose 
-  console.log(paperComputerMove);
+  console.log(compMove);
 
   //if the computer move is rock and button is rock the results equals 
   
-   let PaperResult = ''; 
-  if (paperComputerMove  === 'rock'){
-  PaperResult = 'You win';
-  }else if (paperComputerMove === 'paper'){
-  PaperResult = 'Its a tie';}
-  else if (paperComputerMove === 'scissor'){
-  PaperResult = 'You loose, Computer wins'; 
+   let results = ''; 
+  if (compMove === 'rock'){
+  results = 'You win';
+  }else if (compMove === 'paper'){
+  results = 'Its a tie'}
+  else if (compMove === 'scissor'){
+  results = 'You loose, Computer wins'
   }
 
   // create a popup
-  alert(`You picked paper, Computer picked ${paperComputerMove}. Results=${PaperResult}`);
+  alert(`You picked paper, Computer picked ${compMove}. Results=${results}`);
   "
-
   >Paper</button>
 
   <!-- scissors -->
   <button
   class="scissor" 
   onclick="
-      const scissorRandomNumber =Math.random();
-      let computerMove = '';
+      const randomNumber=Math.random();
+      let compMove = '';
   
-      if (scissorRandomNumber >= 0 && scissorRandomNumber<1/3){
+      if (randomNumber >= 0 && randomNumber<1/3){
     // Have the computer move : 
-        computerMove = 'rock';
+        compMove = 'rock';
 
-      }else if (scissorRandomNumber>=1/3 && scissorRandomNumber<2/3){
-      computerMove ='paper';
+      }else if (randomNumber>=1/3 && randomNumber<2/3){
+      compMove ='paper';
 
       } 
-      else if(scissorRandomNumber >=2/6 && scissorRandomNumber<1){
-        computerMove ='scissor';
+      else if(randomNumber >=2/6 && randomNumber<1){
+        compMove ='scissor';
       } 
 
 //This is what the computer choose 
-  console.log(computerMove);
+  console.log(compMove);
 
   //if the computer move is rock and button is rock the results equals 
   
-   let result = ''; -0
-if (computerMove  === 'rock'){e4
-  result = 'You loose, Computer wins';
-  }else if (computerMove === 'paper'){
-  result = 'You win';}
-  else if (computerMove === 'scissor'){
-  result = 'Its a tie'; 
+   let results = ''; -0
+if (compMove  === 'rock'){e4
+  results= 'You loose, Computer wins';
+  }else if (compMove === 'paper'){
+  results = 'You win';}
+  else if (compMove === 'scissor'){
+  results = 'Its a tie'; 
   }
 
   // create a popup
-  alert(`You picked scissors, Computer picked ${computerMove}. Results=${result}`);
+  alert(`You picked scissors, Computer picked ${compMove}. Results=${results}`);
   "
   >Scissor</button>
   
