--- a/super/calculator.html
+++ b/super/calculator.html
@@ -7,7 +7,6 @@
 </head>
 <body >
 
-
   <div style="justify-items:center;">
   <h1>Calculator</h1>
 
@@ -117,13 +116,15 @@
   <p style="justify-content:left;">
     <!-- Finds the total -->
     <button title="total"  onclick="
-    //calculation = eval(calculation)
-    console.log(`Total= ${calculation}`)">=</button>
+    calculation = eval(calculation)
+    console.log(`Total= ${calculation}`)
+    
+    /*console.log(`Total= ${calculation}*/
+    "
+    
+    >=</button>
   </p>
 </div>
-
-
-
 
 </body>
 <script> 
