--- a/super/super.html
+++ b/super/super.html
@@ -274,7 +274,9 @@ true && false = false </p>
  of whether it's truthy or falsey) and completes</b>
  
 
-<h2> ARITHMETIC IN JAVASCRIPT</h2>
+<h2> OBJECTS</h2>
+
+
 
 <!-- Javascript code -->
   <script > 
